frontend/react/src/App.css
:root {
	--sidebar-width: 25vw;
}
body {
	background-color: #ffffff;
}
h1 {
	color: #585ea3
}
a:link {
	font-size: smaller;
	color: 585ea3;
	text-decoration: none;
}
a {
  color: #5555FF;
}
a:visited {
  color: #5555FF;
}
a:hover {
  color: #9999FF;
}

.site {
	display:grid;
	grid-gap: 1rem;
	grid-template-columns: var(--sidebar-width) auto;
}

#main {
	grid-column-start: 2;
	padding-top: 1rem;
}

.sidebar{
	position: fixed;
	width: var(--sidebar-width);
	height: 100%;
	background-color: lightsteelblue;
}

.filter {
	padding: 2rem;
}

.map {
	height: 100%;
	width: 100%;
}

